// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-searchfield Custom Visual 1`] = `
<div
  class="m-searchfield m-searchfield-stories"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mSearchfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Search
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Error 1`] = `
<div
  class="m-searchfield m--has-error m--has-validation-message"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-error m--has-label m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mSearchfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Search
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-invalid="true"
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        Error message
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Label 1`] = `
<div
  class="m-searchfield"
  n=""
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mSearchfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Search
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Placeholder 1`] = `
<div
  class="m-searchfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              placeholder="placeholder"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Valid 1`] = `
<div
  class="m-searchfield m--is-valid m--has-validation-message"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--is-valid m--has-label m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mSearchfield-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Search
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__valid"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Valide
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        Valid message
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield default 1`] = `
<div
  class="m-searchfield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
    word-wrap="true"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              class="m-textfield__input"
              id="mSearchfield-fakeId"
              type="search"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          aria-controls="mSearchfield-fakeId"
          class="m-searchfield__search-button"
          title="Rechercher"
        >
          <svg
            aria-hidden="true"
            class="m-icon m-searchfield__search-button-icon"
            height="22px"
            width="22px"
          >
            <!---->
             
            <use
              aria-hidden="true"
              class=""
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-searchfield__validation"
    id="validationMessageId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
